tests/build/cases/widget_new/not_allowed_in_when1.stderr
warning: unused variable: `node`
  --> cases/widget_new/not_allowed_in_when1.rs:16:17
   |
16 |             let node = #foo;
   |                 ^^^^ help: if this is intentional, prefix it with an underscore: `_node`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0080]: evaluation of constant value failed
  --> cases/widget_new/not_allowed_in_when1.rs:13:13
   |
13 |       let _ = wgt! {
   |  _____________^
14 | |         margin = 0;
15 | |         when {
16 | |             let node = #foo;
...  |
20 | |         }
21 | |     };
   | |_____^ the evaluated program panicked at 'property `foo` cannot be read in when expr', $DIR/cases/widget_new/not_allowed_in_when1.rs:13:13
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `wgt` (in Nightly builds, run with -Z macro-backtrace for more info)
